--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ env:
 go:
 - "1.12"
 
+before_install:
+  - go get -t -v ./...
+ 
 script:
   - go test -v -covermode=atomic
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
