--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ go:
 - "1.12"
 
 before_install:
+  - go get -v -u golang.org/x/lint/golint
   - go get -t -v
  
 script:
+  - golint .
   - cd websocket
   - go test -v -coverprofile=coverage.txt -covermode=atomic
 
