--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ script:
   - golint .
   - cd websocket
   - go test -v -coverprofile=coverage.txt -covermode=atomic
+  - cd ../rest
+  - go test -v -coverprofile=coverage.txt -covermode=atomic -race
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
