--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - go test -v -coverprofile=coverage.txt -covermode=atomic
   - cd ../rest
   - go get -t -v
-  - go test -v -coverprofile=coverage.txt -covermode=atomic -race
+  - go test -v -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
