feat: write logic to connect to the futures websocket

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+# !.vscode/launch.json
 !.vscode/extensions.json
 
 keys
